[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

build = "build.rs"
default-run = "ledger"

[dependencies]
ed25519-dalek = "1.0"
prost = "0.13"
tokio = { version = "1.44", features = ["full"] }
rand = "0.7"
sha2 = "0.10"
tonic = "0.12"
hex = "0.4.3"
futures = "0.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
