[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[lib]
name = "ledgerlib"
path = "src/lib.rs"

[[bin]]
name = "ledger"
path = "src/main.rs"



[dependencies]
hex = "0.4.3"
sha2 = "0.10.8"
ring = "0.17.14"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
