[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[lib]
name = "ledgerlib"
path = "src/lib.rs"

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
sha2 = "0.10.8"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"
